--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,43 +19,44 @@ body {
 }
 
 .icon {
-  &::before {
-    display: block;
-    width: 1em;
-    height: 1em;
-    background-repeat: no-repeat;
-    content: "";
-  }
+  display: block;
+  width: 1em;
+  height: 1em;
+  background-repeat: no-repeat;
 
-  &_chevron-down::before {
+  &_chevron-down {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath stroke='%23CCC' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M30 9 16 23 2 9'/%3E%3C/svg%3E");
   }
 
-  &_json::before {
+  &_link {
+    background-image: url("data:image/svg+xml,%3Csvg fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath d='M11.968 5.617h-2.89c-1.798 0-2.698 0-3.384.352A3.22 3.22 0 0 0 4.29 7.382c-.35.692-.35 1.598-.35 3.41V23.08c0 1.811 0 2.716.35 3.408a3.223 3.223 0 0 0 1.403 1.414c.686.352 1.584.352 3.379.352h12.21c1.795 0 2.693 0 3.379-.352a3.226 3.226 0 0 0 1.404-1.415c.35-.69.35-1.595.35-3.402v-2.916m1.605-8.084V4m0 0h-8.027m8.027 0L16.784 15.319' stroke='%23ccc' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' /%3E%3C/svg%3E");
+  }
+
+  &_json {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath fill='%23F5DE19' d='M4 15a2.5 2.5 0 0 0 1.6-.5c.42-.36.7-.85.8-1.4.17-.99.23-2 .2-3V7.5c.07-.59.24-1.16.5-1.7A3 3 0 0 1 9 4.1c.5-.08 1-.12 1.5-.1h.7v2H11a2.3 2.3 0 0 0-1.8.4 3.4 3.4 0 0 0-.4 2.1c.05 1.4.02 2.8-.1 4.2a4.7 4.7 0 0 1-.8 2A4.6 4.6 0 0 1 6.1 16a3.8 3.8 0 0 1 2 1.8c.47 1.2.68 2.5.6 3.8v3c.06.42.27.81.6 1.1a2.6 2.6 0 0 0 1.6.3h.3v2h-.7a5.7 5.7 0 0 1-1.7-.2 3 3 0 0 1-1.4-1 3.4 3.4 0 0 1-.6-1.6c-.14-1.06-.2-2.13-.2-3.2.03-1.04-.04-2.08-.2-3.1a2.4 2.4 0 0 0-.8-1.4A2.5 2.5 0 0 0 4 17v-2Zm24 2a2.5 2.5 0 0 0-1.6.5c-.42.36-.7.86-.8 1.4a16.48 16.48 0 0 0-.2 3.1c0 1.07-.06 2.14-.2 3.2a3.4 3.4 0 0 1-.6 1.7 3 3 0 0 1-1.4.9 5.7 5.7 0 0 1-1.7.2h-.7v-2h.3a2.6 2.6 0 0 0 1.6-.3c.31-.33.49-.75.5-1.2v-2.9a9 9 0 0 1 .7-3.8 3.8 3.8 0 0 1 2-1.8 4.6 4.6 0 0 1-1.7-1.3 4.7 4.7 0 0 1-.8-2c-.12-1.4-.15-2.8-.1-4.2a3.4 3.4 0 0 0-.4-2A2.3 2.3 0 0 0 21 6h-.3V4h.7c.5-.02 1 .02 1.5.1a3 3 0 0 1 1.1.6 3 3 0 0 1 .8 1c.23.55.36 1.12.4 1.7l.1 2.8c-.03.97.04 1.95.2 2.9.1.55.38 1.04.8 1.4a2.5 2.5 0 0 0 1.6.5l.1 2Z'/%3E%3C/svg%3E");
   }
 
-  &_css::before {
+  &_css {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath stroke='%23519ABA' stroke-linecap='round' stroke-width='2' d='M13.25 5 9.12 27M22.88 5l-4.13 22M6.37 10.5H27m-22 11h20.63'/%3E%3C/svg%3E");
   }
 
-  &_js::before {
+  &_js {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath fill='%23CBCB41' d='M19.63 20c.4.72 1 1.33 1.76 1.75.75.41 1.61.62 2.48.6 1.75 0 2.88-.71 2.88-1.89 0-1.4-1.25-1.88-3.13-2.7l-1.12-.35c-3-1.3-5-2.82-5-6.1 0-3.06 2.38-5.3 6.25-5.3a6.58 6.58 0 0 1 3.5.74 6.06 6.06 0 0 1 2.5 2.44l-3.38 2c-.22-.51-.6-.94-1.1-1.23a2.94 2.94 0 0 0-1.64-.42 1.99 1.99 0 0 0-1.37.43 1.78 1.78 0 0 0-.64 1.21c0 1.18.75 1.77 2.63 2.47l1.13.47C29 15.53 31 17.06 31 20.46c0 3.53-3 5.52-7.13 5.52a8.68 8.68 0 0 1-4.51-.98 8 8 0 0 1-3.23-3.13l3.5-1.88Zm-15.13.35c.63 1.17 1.25 2.11 2.75 2.11 1.38 0 2.25-.59 2.25-2.58V6.25h4.25v13.74c0 4.12-2.5 6-6.25 6a6.97 6.97 0 0 1-3.86-.87A6.38 6.38 0 0 1 1 22.34l3.5-2Z'/%3E%3C/svg%3E");
   }
 
-  &_font::before {
+  &_font {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath fill='%23CC3E44' d='M27.5 11.75c-.08-.3-.27-.55-.54-.74-.27-.19-.6-.3-.94-.3h-2.05c-.32 0-.64.1-.9.27s-.46.4-.56.68l-2.64 7.22 1.24 4.36 1.13-3.1h4.27l1.1 3.89H31l-3.5-12.28Zm-4.63 6.68 1.59-4.33h.33l1.24 4.33h-3.15ZM13.06 6H9.99c-1 0-1.88.58-2.2 1.41L1 26h4.26l2.14-5.84h6.4L15.48 26h5.07L15.3 7.55a2.06 2.06 0 0 0-.82-1.12c-.4-.28-.9-.43-1.42-.43ZM8.34 17.59l2.38-6.5h.5l1.86 6.5H8.34Z'/%3E%3C/svg%3E");
   }
 
-  &_html::before {
+  &_html {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath fill='%23E37933' d='M10.85 9.94a1.75 1.75 0 0 0 .58-1.2 1.88 1.88 0 0 0-.39-1.29 1.68 1.68 0 0 0-.5-.43 1.57 1.57 0 0 0-1.83.23l2.27 2.7h-.13ZM8.71 24.48a1.57 1.57 0 0 0 1.1.52 1.47 1.47 0 0 0 1.1-.45 1.67 1.67 0 0 0 .5-1.16 1.77 1.77 0 0 0-.43-1.2l-2.14 2.43-.13-.14Zm0-17.23-7.05 7L3.8 16.8l7.18-7L8.7 7.38v-.13Zm-7.05 10.5 7.05 6.87 2.27-2.43-7.05-7-2.14 2.56h-.13Zm0-3.5a2.65 2.65 0 0 0 0 3.5l2.14-2.56c.38.4.38 1.21 0 1.62l-2.14-2.56Zm19.4 7.8a1.85 1.85 0 0 0-.19 2.5c.28.36.68.58 1.12.62.44.04.87-.11 1.2-.42l-2.01-2.7h-.13Zm2.13-14.67a1.5 1.5 0 0 0-1.1-.4 1.44 1.44 0 0 0-1.04.54 1.7 1.7 0 0 0 .13 2.29l2.01-2.43Zm0 17.24 7.05-6.87-2.01-2.56-7.05 7 2.01 2.43Zm7.05-10.37L23.2 7.38l-2.01 2.43 7.05 7 2.01-2.56Zm0 3.5a2.4 2.4 0 0 0 0-3.5l-2.01 2.56a1.14 1.14 0 0 1 0-1.62l2.01 2.56ZM20.04 5.63a1.82 1.82 0 0 0-.37-1 1.63 1.63 0 0 0-.86-.58 1.54 1.54 0 0 0-1.01.08c-.32.14-.6.38-.78.7l3.03.8ZM12 26.37c.02.37.15.72.37 1 .23.29.53.49.86.58.34.09.7.06 1.01-.08.32-.14.6-.38.78-.7l-3.02-.8Zm5.03-21.55L12 26.37l3.02.8 5.04-21.54-3.03-.8Z'/%3E%3C/svg%3E");
   }
 
-  &_ts::before {
+  &_ts {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath fill='%23519ABA' d='M10.83 6.27v19.46H6.86V6.27h3.97Zm5.96 0V9.4H1V6.27h15.79ZM27 20.64c0-.35-.05-.66-.16-.94-.1-.28-.28-.54-.55-.77a4.94 4.94 0 0 0-1.16-.71c-.5-.23-1.14-.47-1.93-.72a24 24 0 0 1-2.5-.97c-.77-.35-1.47-.77-2.07-1.24a4.63 4.63 0 0 1-1.91-3.88c0-.8.18-1.54.53-2.2.35-.67.85-1.24 1.49-1.71A7.12 7.12 0 0 1 21 6.39c.87-.26 1.84-.39 2.88-.39 1.43 0 2.67.26 3.73.78A5.99 5.99 0 0 1 30.1 8.9c.59.9.89 1.93.89 3.09h-3.96c0-.57-.12-1.07-.36-1.5a2.43 2.43 0 0 0-1.07-1.03 3.77 3.77 0 0 0-1.78-.37c-.69 0-1.26.1-1.72.32-.46.2-.8.48-1.04.84a2.1 2.1 0 0 0-.35 1.18c0 .33.08.63.24.9.17.26.42.51.75.74.33.23.73.45 1.2.66.49.2 1.04.4 1.67.6 1.05.32 1.98.68 2.78 1.08.8.4 1.48.85 2.02 1.35A5.02 5.02 0 0 1 31 20.61a4.92 4.92 0 0 1-1.91 3.97c-.62.47-1.36.82-2.22 1.06-.86.24-1.82.36-2.89.36-.95 0-1.9-.12-2.83-.37a8.57 8.57 0 0 1-2.53-1.17 5.85 5.85 0 0 1-1.81-1.98 5.71 5.71 0 0 1-.68-2.84h4c0 .6.1 1.11.28 1.53a2.67 2.67 0 0 0 2.01 1.58c.47.12 1 .18 1.56.18.7 0 1.26-.1 1.7-.3a2.1 2.1 0 0 0 1.33-2Z'/%3E%3C/svg%3E");
   }
 
-  &_pdf::before {
+  &_pdf {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 32 32'%3E%3Cpath fill='%23CC3E44' d='M29.57 19.96c-.84-.88-2.54-1.4-4.94-1.4-1.28 0-2.77.12-4.38.42a23.74 23.74 0 0 1-4.36-5.85c.93-2.99 1.4-5.4 1.4-7.15C17.29 4 16.59 2 14.56 2a1.9 1.9 0 0 0-1.57.94c-.93 1.63-.5 5.24 1.08 8.81a65.21 65.21 0 0 1-4.22 10.2c-4.57 1.85-7.54 4-7.82 5.71a1.88 1.88 0 0 0 .54 1.7c.16.13.75.64 1.73.64 3.03 0 6.22-5 7.83-8.05 1.26-.42 2.5-.8 3.73-1.17 1.38-.4 2.73-.7 3.97-.9a11.18 11.18 0 0 0 7.46 3.38c1.72 0 2.33-.7 2.56-1.3a2.04 2.04 0 0 0-.3-2.04v.04h.02Zm-1.63 1.24c-.11.64-.74 1.06-1.63 1.06-.23 0-.44-.05-.7-.1a10.8 10.8 0 0 1-4.52-2.43c1.85-.3 3.73-.33 5.6-.12.58.12 1.49.5 1.28 1.62h.02l-.05-.03Zm-8.77-2a56.75 56.75 0 0 0-6.39 1.7c.54-1.05 1-2.06 1.4-3.04.52-1.2.94-2.43 1.33-3.56a26.34 26.34 0 0 0 3.64 4.92v-.03h.02ZM13.74 3.4a.91.91 0 0 1 .8-.51c.86 0 1.02 1.03 1.02 1.82 0 1.38-.42 3.47-1.12 5.83-1.24-3.3-1.33-6.08-.7-7.14ZM9.17 23.2c-2.1 3.55-4.13 5.77-5.36 5.77a.93.93 0 0 1-.63-.23c-.24-.24-.38-.54-.3-.87.25-1.29 2.6-3.06 6.29-4.68Z'/%3E%3C/svg%3E");
   }
 }
