--- a/src/components/Editor/Editor.module.scss
+++ b/src/components/Editor/Editor.module.scss
@@ -1,13 +1,18 @@
 .container {
   display: flex;
-  width: 650px;
-  min-width: 500px;
+  overflow: auto;
+  width: 100%;
   height: 100%;
   flex-direction: column;
-  flex-grow: 0;
   padding-top: 22px;
   padding-right: 30px;
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0;
   line-height: 18px;
+
+  @media (width <= 425px) {
+    padding-top: 16px;
+    padding-right: 14px;
+    font-size: 12px;
+  }
 }
