--- a/src/pages/telechart/index.module.scss
+++ b/src/pages/telechart/index.module.scss
@@ -3,15 +3,20 @@
   overflow: auto;
   width: 100%;
   flex-direction: column;
-  align-items: center;
+  padding-top: 22px;
+  padding-left: 66px;
   background-color: #fff;
   color: #1f1f1f;
   font-size: 12px;
   font-weight: 400;
 
+  @media (width < 1024px) {
+    padding-left: 22px;
+  }
+
   &_dark {
     background-color: #1f1f1f;
-    color: #fff;
+    color: #ccc;
 
     & :global(.tc-tooltip) {
       border: 1px solid #56626d;
@@ -24,15 +29,14 @@
   }
 
   & h2 {
-    margin-top: 40px;
     margin-bottom: 10px;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: bold;
   }
 
-  & h3 {
+  & p {
     margin-bottom: 30px;
-    font-size: 16px;
+    font-size: 14px;
   }
 
   & footer {
@@ -57,10 +61,9 @@
 }
 
 .switch {
-  margin-bottom: 60px;
   color: #3c9ede;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 16px;
   user-select: none;
 }
 
